--- a/css/beamer.css
+++ b/css/beamer.css
@@ -1,18 +1,19 @@
 @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700');
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700);
 
 .remark-slide-content {
-  font-size: 25px;
+  font-size: 120%; /*25px;*/
 }
 .remark-slide-number {
   font-size: 20px;
 }
 body { 
-  font-family: 'Computer Modern Sans', 'Droid Serif', 'Palatino Linotype', 'Book Antiqua', Palatino, 'Microsoft YaHei', 'Songti SC', serif; 
+  font-family: 'Noto Sans', 'Droid Serif', 'Computer Modern Sans', 'Palatino Linotype', 'Book Antiqua', Palatino, 'Microsoft YaHei', 'Songti SC', serif; 
 }
 h1, h2, h3 {
-  font-family: 'Computer Modern Sans', 'Yanone Kaffeesatz';
+  font-family: 'Yanone Kaffeesatz', 'Computer Modern Sans';
   font-weight: normal;
   color: #0c5999;
 }
@@ -31,15 +32,15 @@ a, a > code {
 
 /* To increase presentation notes size */
 .remark-notes-area {
-    font-size: 25px;
+    font-size: 120%; /*25px;*/
 }
 
 /* Leaflet map controls */
 .leaflet-container {
-    font: 20px 'Computer Modern Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    font: 20px 'Yanone Kaffeesatz', 'Computer Modern Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
 .info {
-    font: 18px 'Computer Modern Sans', Arial, Helvetica, sans-serif;
+    font: 18px 'Yanone Kaffeesatz', 'Computer Modern Sans', Arial, Helvetica, sans-serif;
 }
 
 
